--- a/static/all-slos.html
+++ b/static/all-slos.html
@@ -69,7 +69,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <div id="app-side-nav">
         </div>
 
-        <div id="slos">
+        <div id="all-slos">
             <h1 class="myOrg-heading">SLOs</h1>
             {{ .OrgSLOs | safeHTML }}
             
