Feat: Added Download Formats Options (XML/SQL) * Added two new options (XML and SQL) for data download. These work similarly to what we already have for the formats CSV and JSON. * Also added two new tests, one for each new type of download format. These run a basic test confirming that, when we download the data, it is indeed in the format intended and with all the information needed. Co-authored-by: Rodrigo Alves rodrigo.lucas.alves@tecnico.ulisboa.pt

--- a/static/index.html
+++ b/static/index.html
@@ -268,6 +268,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                             <div class="dropdown-menu box-shadow download-options" aria-labelledby="index-btn" id="save-query-options">
                                 <li id="csv-block" class="query-language-option">Download as CSV</li>
                                 <li id="json-block" class="query-language-option">Download as JSON</li>
+                                <li id="xml-block" class="query-language-option">Download as XML</li>
+                                <li id="sql-block" class="query-language-option">Download as SQL</li>
                             </div>
                         </div>
                         <button class="btn show-record-intro-btn below-btn-img" id="show-record-intro-btn"  title="Query Response Information"></button>
