Changed the flow to add panel

--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -602,10 +602,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             <div class="section">
                 <div class="panEdit-navBtns">
                     <button class="panEdit-btn panEdit-discard" id="discard-btn" title="Undo all changes">Cancel</button>
-                    <!-- <button class="panEdit-btn panEdit-save" id="save-btn"
-                        title="Apply changes and save dashboard">Save</button> -->
-                    <button class="panEdit-btn panEdit-apply" id="apply-btn"
-                        title="Apply changes and go to dashboard">Save</button>
+                    <button class="panEdit-btn panEdit-save" id="save-btn"
+                        title="Apply changes and save dashboard">Save</button>
+                    <!-- <button class="panEdit-btn panEdit-apply" id="apply-btn"
+                        title="Apply changes and go to dashboard">Apply</button> -->
                 </div>
             </div>
         </div>
