--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -171,7 +171,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <ul class="editPanelMenu">
                     <div class="d-flex justify-content-between w-100 align-items-baseline">
                         <div>
-                            <h6 class="widgets-text">Widgets</h6>
+                            <h6 class="widgets-text">Panel Type</h6>
                         </div>
                         <div class="close-widget-popup">×</div>
                     </div>
