Dashboard Setting Fix

--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -636,7 +636,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                     </div> -->
                 </div>
             </div>
-            <div class="section">
+        </div>
+        <div>
+            <div class="button-section">
                 <div class="panEdit-navBtns">
                     <button class="panEdit-btn panEdit-discard" id="discard-btn" title="Undo all changes">Cancel</button>
                     <button class="panEdit-btn panEdit-save" id="save-btn"
