--- a/static/metrics-old.html
+++ b/static/metrics-old.html
@@ -178,7 +178,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <script src="./js/date-picker.js?cb=1_1_10"></script>
     <script src="./js/lib/chart.umd.min.js"></script>
     <script src="./js/search.js?cb=1_1_10"></script>
-    <script src="./js/metrics.js?cb=1_1_10"></script>
+    <script src="./js/metrics-old.js?cb=1_1_10"></script>
 
     {{ .RunCheck2 | safeHTML }}
     {{ .RunCheck3 | safeHTML }}
