--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -44,7 +44,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <link rel="stylesheet" href="./css/lib/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/lib/all.min.css" />
     <link rel="stylesheet" href="./css/lib/ag-grid.min.css" />
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css" />
     <link rel="stylesheet" href="./css/dashboard.css" />
     <link rel="stylesheet" href="./css/siglens.css" />
 
@@ -226,17 +225,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 </div>
 
                 <div class="navbar-options">
+                    <div class="index-container">
+                        <input type="text" name="" id="index-listing">
+                    </div>
                     <div class="dropdown">
-                        <button class="btn dropdown-toggle btn-top" type="button" id="index-btn" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false" data-bs-toggle="dropdown"
-                            title="Index Name to search on" style="display: none;">
-                            <span>Index</span>
-                            <img class="dropdown-arrow orange" src="assets/arrow-btn.svg" alt="expand">
-                            <img class="dropdown-arrow blue" src="assets/up-arrow-btn-light-theme.svg" alt="retract">
-                        </button>
-                        <div class="dropdown-menu box-shadow" aria-labelledby="index-btn" id="available-indexes">
-                            <div id="index-listing"></div>
-                        </div>
                         <button class="btn dropdown-toggle btn-top" type="button" id="date-picker-btn" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false" data-bs-toggle="dropdown"
                             title="Pick the time window">
