--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -78,6 +78,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                     <h4 class="all-dashboards" id="all-dashboards-text">All Dashboards</h4>
                     <span>></span>
                     <h3 class="name-dashboard"></h3>
+                    <button class="star-icon" id="favbutton" title="Mark as favorite" ></button>
                 </div>
                 <div class="btn-container">
                     <div class="dropdown">
