--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -162,7 +162,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 </div>
             </div>
 
-            <div id="panel-container" class="grid-stack">
+            <div class="p-3">
+                <div id="panel-container" class="grid-stack">
+                </div>
             </div>
 
 
