Panel Icons Fix

--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -226,7 +226,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             </div>
             <div class="panEdit-btn panEdit-discard" title="Undo all changes">×</div>
         </div>
-        <div>
+        <div style="height: 80%;">
             <div class="panelEditorLeft" id="panel-editor-left">
                 <div>
                     <div class="panEdit-navBar">
