Addressing PR comments

--- a/static/metricsummary.html
+++ b/static/metricsummary.html
@@ -116,7 +116,7 @@
         <script src="./js/date-picker.js?cb=1_1_10"></script>
         <script src="./js/lib/chart.umd.min.js"></script>
         <script src="./js/metrics-explorer.js"></script>
-        <script src="./js/summary.js"></script>
+        <script src="./js/metricsummary.js"></script>
 
 
         {{ .RunCheck2 | safeHTML }}
