Edit Panel CSS Fix

--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -226,7 +226,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             </div>
             <div class="panEdit-btn panEdit-discard" title="Undo all changes">×</div>
         </div>
-        <div style="height: 80%;">
+        <div style="flex-grow:1; overflow-y:auto">
             <div class="panelEditorLeft" id="panel-editor-left">
                 <div>
                     <div class="panEdit-navBar">
@@ -640,7 +640,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 </div>
             </div>
             <div id="viewPanel-container">
-                
             </div>
         </div>
         <div class="button-section">
