Update style for 'All Dashboards > Dashboard-name'

--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -74,9 +74,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <div id="new-dashboard">
             <div class="header-container">
                 <div class="dashboard-names">
-                    <span class="panView-goToDB" title="Go back">&#8592</span>
                     <h4 class="all-dashboards" id="all-dashboards-text">All Dashboards</h4>
-                    <span>></span>
+                    <span class="dashboard-arrow"></span>
                     <h3 class="name-dashboard"></h3>
                     <button class="star-icon" id="favbutton" title="Mark as favorite" ></button>
                 </div>
