Added description input box

--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -631,9 +631,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                             <div class="panEdit-nameChange">
                                 <input type="text" id="panEdit-nameChangeInput">
                             </div>
-                            <!-- <div class="panEdit-descrChange">
-                                <textarea name="" id="panEdit-descrChangeInput" rows="3"></textarea>
-                            </div> -->
+                            <div class="panEdit-descrChange">
+                                <textarea name="" id="panEdit-descrChangeInput" rows="2"></textarea>
+                            </div>
                         </div>
                     </div>
                 </div>
