UI changes for time picker

--- a/static/cluster-stats.html
+++ b/static/cluster-stats.html
@@ -85,6 +85,14 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                         <p class="dt-header">Ingestion Stats for the last</p>
                         <div class="ranges">
                             <div class="inner-range">
+                                <div id="now-1h" class="range-item">1 Hr</div>
+                                <div id="now-3h" class="range-item">3 Hrs</div>
+                            </div>
+                            <div class="inner-range">
+                                <div id="now-6h" class="range-item">6 Hrs</div>
+                                <div id="now-12h" class="range-item">12 Hrs</div>
+                            </div>
+                            <div class="inner-range">
                                 <div id="now-24h" class="range-item">24 Hrs</div>
                                 <div id="now-90d" class="range-item">90 Days</div>
                             </div>
