--- a/static/cluster-stats.html
+++ b/static/cluster-stats.html
@@ -141,16 +141,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                             <table id="metrics-data-table" class="index-data-table"></table>
                         </div>
                     </div>
-                    <div class="graph-container mt-5">
-                        <div class="query-stats">
-                            <p class="query-stats-header">Query Stats</p>
-                            <table class="query-table" id="query-table">
-                                <tbody>
-                                </tbody>
-                            </table>
-                        </div>
+                    <div class="graph-container mt-5 logs-container">
                         <div class="bar_chart_container">
-                            <canvas id="TotalVolumeChart"></canvas>
+                            <canvas id="TotalVolumeChart-logs"></canvas>
+                            <div class="bar-graph-footer">Logs Storage</div>
                         </div>
                         <div class="storage-savings-container">
                             <div class="fw-bold storage-savings-title">
@@ -170,6 +164,26 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                             </div>
                         </div>
                         <div class="popupOverlay"></div>
+                    </div>
+                    <div class="graph-container mt-5 metrics-container">
+                        <div class="bar_chart_container">
+                            <canvas id="TotalVolumeChart-metrics"></canvas>
+                            <div class="bar-graph-footer">Metrics Storage</div>
+                        </div>
+                        <div class="storage-savings-container">
+                            <div class="fw-bold storage-savings-title">
+                                Storage Savings
+                            </div>
+                        </div>
+                    </div>
+                    <div class="query-stats-container">
+                    <div class="query-stats">
+                        <p class="query-stats-header">Query Stats</p>
+                        <table class="query-table" id="query-table">
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
                     </div>
                     <div id="cstats-app-footer">
                         2024 &copy; SigLens
