fix time picker alignment on MyOrg cluster status page

--- a/static/cluster-stats.html
+++ b/static/cluster-stats.html
@@ -70,7 +70,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <div id="empty-response"></div>
         <div id="app-content-area">
             <div class="cstats-data-container myOrg-container">
-                <div class="org-nav-tab">
+                <div class="org-nav-tab subsection-navbar align-items-end justify-content-between">
                     {{ .Button1 | safeHTML }}
                 <div class="dropdown" id="cstats-time-picker">
                     <button class="btn dropdown-toggle" type="button" id="date-picker-btn"
