--- a/static/index.html
+++ b/static/index.html
@@ -133,24 +133,23 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             </div>
             <div id = "custom-code-tab" class="custom-code-tab">
                 <div class="query-builder-container">
-                    <ul class="tab-list">
-                        <li class="tab-li tab-li-query" id = "tab-title1"><a href="#tabs-1" class="custom-query-builder">Builder</a></li>
-                        <li class="tab-li tab-li-code" id = "tab-title2"><a href="#tabs-2"  class="custom-query-builder">Code</a></li>
-                    </ul>
-                    <div class="d-flex">
-                        <div class="dropdown">
-                            <button class="btn dropdown-toggle" type="button" id="query-language-btn" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false" data-bs-toggle="dropdown" title="Select Query Type">
-                                <span>Splunk QL</span>
-                                <img class="dropdown-arrow orange" src="assets/arrow-btn.svg">
-                                <img class="dropdown-arrow blue" src="assets/up-arrow-btn-light-theme.svg">
-                            </button>
+                    <div class="d-flex justify-content-end">
+                        <ul class="tab-list">
+                            <li class="tab-li tab-li-query" id = "tab-title1"><a href="#tabs-1" class="custom-query-builder">Builder</a></li>
+                            <li class="tab-li tab-li-code" id = "tab-title2"><a href="#tabs-2"  class="custom-query-builder">Code</a></li>
+                        </ul>
+                        <button class="btn settings-btn" id="logs-settings">
+                        </button>
+                        <div class="" id="setting-container">
+                            <div style="margin-bottom: 3px;">Query Lanuage:</div>
                             <div class="dropdown-menu box-shadow" aria-labelledby="index-btn" id="query-language-options">
                                 <li id="option-1" class="query-language-option">SQL</li>
                                 <li id="option-2" class="query-language-option">Log QL</li>
                                 <li id="option-3" class="query-language-option active">Splunk QL</li>
                             </div>
                         </div>
+                    </div>
+                    <div class="d-flex">
                         <div id = "tabs-1">
                             <div class="filter-info">
                                 <div id="filter-container">
