Input Value Change

--- a/static/index.html
+++ b/static/index.html
@@ -157,7 +157,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                                 <div id="filter-container">
                                     <div class="filter-con">
                                         <div class="filter-box" id="filter-box-1">
-                                            <span class = "aggregations" id="search-filter-text">Search Filter</span>
+                                            <span class = "aggregations" id="search-filter-text">Search filter</span>
                                             <ul id="tags" class="tags-list"></ul>
                                             <button id="add-con" class="add-con btn">+</button>
                                         </div>
@@ -172,7 +172,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                                     <div class="builder-div">stats</div>
                                     <div class="filter-con second-enter">
                                         <div class="filter-box" id="filter-box-2">
-                                            <span class = "aggregations" id="aggregate-attribute-text">Aggregate Attribute</span>
+                                            <span class = "aggregations" id="aggregate-attribute-text">Aggregation attribute</span>
                                             <ul id="tags-second" class="tags-list"></ul>
                                             <button id="add-con-second" class="add-con btn">+</button>
                                         </div>
@@ -186,7 +186,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                                     <div class="builder-div">group by</div>
                                     <div class="filter-con third-enter">
                                         <div class="filter-box third-box"  id="filter-box-3">
-                                            <span class = "aggregations" id="aggregations">Search Criteria</span>
+                                            <span class = "aggregations" id="aggregations">Group by column name</span>
                                             <ul id="tags-third" class="tags-list"></ul>
                                             <button id="add-con-third" class="add-con btn">+</button>
                                         </div>
