Index Dropdown Fix

--- a/static/index.html
+++ b/static/index.html
@@ -82,6 +82,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                     <div style="margin-right: 5px;">Indexes:</div>
                     <div class="index-container">
                         <input type="text" name="" id="index-listing">
+                        <button id="add-index" class="add-con btn">+</button>
                     </div>
                 </div>
                 <div class="dropdown">
