--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -237,6 +237,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                         <div class="navbar-options">
                             <div class="index-container">
                                 <input type="text" name="" id="index-listing">
+                                <button id="add-index" class="add-con btn">+</button>
                             </div>
                             <div class="dropdown">
                                 <button class="btn dropdown-toggle btn-top" type="button" id="date-picker-btn" data-toggle="dropdown"
