--- a/static/feedback.html
+++ b/static/feedback.html
@@ -32,7 +32,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <meta charset="UTF-8">
     <title>SigLens</title>
 
-    <link href="./css/siglens.css" rel="stylesheet" />
+    <link href="./css/siglens.css?v={{ CSSVersion }}" rel="stylesheet" />
 
     {{ .RunCheck1 | safeHTML }}
 </head>
