--- a/static/all-slos.html
+++ b/static/all-slos.html
@@ -44,7 +44,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <link rel="stylesheet" href="./css/lib/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/lib/all.min.css" />
     <link rel="stylesheet" href="./css/lib/ag-grid.min.css" />
-    <link rel="stylesheet" href="./css/siglens.css" />
+    <link rel="stylesheet" href="./css/siglens.css?v={{ CSSVersion }}" />
     {{ .SLOCss | safeHTML }}
 
     <script src="./js/lib/lodash.min.js"></script>
