--- a/static/metrics-explorer.html
+++ b/static/metrics-explorer.html
@@ -44,8 +44,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <link rel="stylesheet" href="./css/lib/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/lib/all.min.css" />
     <link rel="stylesheet" href="./css/lib/ag-grid.min.css" />
-    <link rel="stylesheet" href="./css/siglens.css" />
-    <link rel="stylesheet" href="./css/metrics-explorer.css" />
+    <link rel="stylesheet" href="./css/siglens.css?v={{ CSSVersion }}" />
+    <link rel="stylesheet" href="./css/metrics-explorer.css?v={{ CSSVersion }}" />
     <style>
         #ui-id-1.ui-widget.ui-widget-content,
         #ui-id-2.ui-widget.ui-widget-content,
