--- a/static/metrics-explorer.html
+++ b/static/metrics-explorer.html
@@ -170,7 +170,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <div class="mt-4">
                     <div class="graph-view-container btn">
                         <label class="switch">
-                            <input type="checkbox" id="toggle-switch" checked>
+                            <input type="checkbox" id="graph-toggle-switch" checked>
                             <span class="slider round"></span>
                         </label>
                         <label class="label">One graph per query</label>
