Fix: Prevent Editing of Default Dashboards

--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -649,7 +649,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     </div>
     <div class="dbSet-container">
         <div class="dbSet-navBar">
-            <div>
+            <div class="d-flex align-items-center">
                 <span class="dbSet-goToDB" title="Go back">&#8592</span>
                 <span class="dbSet-name">DBName</span>
             </div>
