--- a/static/metric-summary.html
+++ b/static/metric-summary.html
@@ -118,14 +118,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 </div>
             </div>
             
-            <div class="mt-3 h-100 mb-2" id="tracing-container" style="margin:2.5%">
+            <div class="mt-3 h-100 mb-2" id="tracing-container" style="margin:2.5%;">
                 <div id="ag-grid" class="ag-theme-mycustomtheme">
                 </div>
-            </div>
-       
-
-            <div class="pagination" id="pagination">
-                <!-- Pagination buttons will be dynamically inserted here -->
             </div>
         </div>
     </div>
