Popup for Alert Name Input on Alerting Page

--- a/static/all-alerts.html
+++ b/static/all-alerts.html
@@ -84,6 +84,16 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <div id="ag-grid" class="ag-theme-mycustomtheme">
                 </div>
             </div>
+            <div class="addrulepopupOverlay">
+                <div class="addrulepopupContent">
+                    <h3 class="header">Add Rule</h3>
+                    <label for="rule-name">Rule Name:</label>
+                    <input type="text" id="rule-name" name="rule-name" required>
+                    <button type="button" id="addrule-cancel-btn">Cancel</button>
+                    <button type="button" id="addrule-save-btn">Save</button>
+                </div>
+            </div>
+            
             <div class="popupOverlay">
             </div>
             <div class="popupContent">
